--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="stylesheets/clients.css">
 	<link rel="stylesheet" href="stylesheets/slick.css">
 	<link rel="stylesheet" href="stylesheets/slick-theme.css">
-	<script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <title>ModusVersus</title>
 </head>
 <body>
