--- a/contacts.html
+++ b/contacts.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="yandex-verification" content="05717a2cd7300851" />
 	<link rel="stylesheet" href="stylesheets/content.css">
 	<link rel="stylesheet" href="stylesheets/contacts.css">
 	<link rel="stylesheet" href="stylesheets/header.css">
